# swagger.json
@@ -129,9 +129,6 @@
           }
         ],
         "responses": {
-          "400": {
-            "description": "Bad Request"
-          },
           "404": {
             "description": "Not Found"
           },
@@ -161,6 +158,230 @@
         "responses": {
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/consent": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "accepted_terms": {
+                  "example": "any"
+                },
+                "accepted_at": {
+                  "example": "any"
+                },
+                "user_agent": {
+                  "example": "any"
+                },
+                "language": {
+                  "example": "any"
+                },
+                "timezone": {
+                  "example": "any"
+                },
+                "screen_resolution": {
+                  "example": "any"
+                },
+                "platform": {
+                  "example": "any"
+                },
+                "device_type": {
+                  "example": "any"
+                },
+                "page_url": {
+                  "example": "any"
+                },
+                "referrer": {
+                  "example": "any"
+                },
+                "terms_version": {
+                  "example": "any"
+                },
+                "stripe_customer_id": {
+                  "example": "any"
+                },
+                "stripe_subscription_id": {
+                  "example": "any"
+                },
+                "plan": {
+                  "example": "any"
+                },
+                "finalized_at": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/consent-get": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "stripe_customer_id": {
+                  "example": "any"
+                },
+                "stripe_subscription_id": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/consent-update": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "stripe_customer_id": {
+                  "example": "any"
+                },
+                "stripe_subscription_id": {
+                  "example": "any"
+                },
+                "accepted_terms": {
+                  "example": "any"
+                },
+                "accepted_at": {
+                  "example": "any"
+                },
+                "user_agent": {
+                  "example": "any"
+                },
+                "language": {
+                  "example": "any"
+                },
+                "timezone": {
+                  "example": "any"
+                },
+                "screen_resolution": {
+                  "example": "any"
+                },
+                "platform": {
+                  "example": "any"
+                },
+                "device_type": {
+                  "example": "any"
+                },
+                "page_url": {
+                  "example": "any"
+                },
+                "referrer": {
+                  "example": "any"
+                },
+                "terms_version": {
+                  "example": "any"
+                },
+                "plan": {
+                  "example": "any"
+                },
+                "finalized_at": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -332,8 +553,34 @@
         }
       }
     },
-    "/logout": {
+    "/consents": {
       "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/consent-destroy": {
+      "post": {
         "description": "",
         "parameters": [
           {
@@ -351,6 +598,12 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
